Fix emojis and layout in README